--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
   <div class="container">
     <div class="navigation">
       <div class="logo"><h1>W.</h1></div>
+      <label for="menu-toggle" class="menu-icon">
+        <img src="./assets/images/menu-icon.png" alt="Menu">
+      </label>
+      <label for="menu-toggle" class="close-icon">
+        <img src="./assets/images/close-menu.png" alt="Close">
+      </label>
       <div class="navbar">
         <ul>
           <li><a href="#">Home</a></li>
@@ -40,10 +46,12 @@
           <h4>Hydrogen VS Electric Cars</h4>
           <p>Will hydrogen-fueled cars ever catch up to EVs?</p>
         </div>
+        <hr>
         <div class="item">
           <h4>The Downsides of AI Artistry</h4>
           <p>What are the possible adverse effects of on-demand AI image generation?</p>
         </div>
+        <hr>
         <div class="item">
           <h4>Is VC Funding Drying Up?</h4>
           <p>Private funding by VC firms is down 50% YOY. We take a look at what that means.</p>
