--- a/index.html
+++ b/index.html
@@ -5,17 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>news homepage</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://fontawesome.com/kits/a27592c381/setup">
 </head>
 <body>
   <div class="container">
     <div class="navigation">
       <div class="logo"><h1>W.</h1></div>
-      <label for="menu-toggle" class="menu-icon">
-        <img src="./assets/images/menu-icon.png" alt="Menu">
-      </label>
-      <label for="menu-toggle" class="close-icon">
-        <img src="./assets/images/close-menu.png" alt="Close">
-      </label>
+      <i class="fa fa-bars"></i>
+      <i class="fa fa-times"></i>
       <div class="navbar">
         <ul>
           <li><a href="#">Home</a></li>
